# rhinventory

./: .env_example  .envrc  .gitignore  README.md  TODO  app.py  db.py  dbseed.py  pyproject.toml  requirements.txt  rhinventory.db
.github/workflows/: pytest.yml
alembic/: 86e14347886d_add_checkedtrait_to_magdb_optionalize_.py  env.py
alembic/versions/: 00191d8fc360_fix_missing_fields_in_magdb_supplements.py  00955b32a31b_add_magdb_tables.py  086cd4bf22b6_add_statement_aggregate.py  0923c8b71af8_add_new_asset_categories.py  09e7b390eb7f_asset_condition_new_column.py  0a73573cde8f_make_push_key_related_columns_in_.py  0b01e7f314d8_add_note_to_issue_version.py  0c6e55fa2086_add_asset_contains.py  0e3519f2f8dc_remove_unique_key_on_magazinesupplement.py  10c4d1c36bb3_add_event_store_tables.py  1128918c4863_add_magdb_tables.py  195f4992e16e_fix.py  1b241a692fb5_add_eventsession_internal.py  1c630c618c9a_asset_add_product_codes.py  20d143552684_file_storage_to_enum.py  253881199c98_add_history_field.py  2662f6133944_transaction_finalized_bool.py  27d89e13e01c_label_printers.py  29fa77040244_.py  2c6088a1ae40_add_column_to_assettag.py  2cb264c96fce_file_change_size_to_bigint.py  35012356b25e_add_user_to_session_table.py  3598f0d2ca40_add_batch_number_to_file.py  3822d04489a0_add_file_table.py  3bf0784019fd_add_description_to_assettag.py  3dd084df4064_add_country.py  421e5534b7b3_.py  4259ca42a30d_add_floppy_disk_capture_reassignment_.py  439778c97582_rename_eventpushkey_to_eventsession.py  4572c83cb6b6_add_expose_number_column_to_category.py  46561199b0c1_.py  476d56aba399_.py  494b12e5cb4c_add_file_aggregate_table.py  498e21bb2701_add_checkedtrait_to_magdb_optionalize_.py  4bbb9b42edc7_fix_files_in_magdb.py  4c08bd74399b_change_event_id_into_uuid.py  52e6ee4f9e72_asset_add_description.py  537c1de085d1_add_agg_files_last_known_aggregate.py  54a5494e2f6a_add_format_column_to_log_table.py  59333a5074ef_magazine_url_issue_scan_template.py  (+56 more)
docs/: ddl.sql  rhinventory.dmd
docs/rhinventory/: dl_settings.xml  dmd_open.local
docs/rhinventory/businessinfo/: Business Information.xml
docs/rhinventory/datatypes/: DDLSelection.local  DataTypes.xml  Diagrams.local  Objects.local
docs/rhinventory/logical/: Diagrams.local  Logical.xml  Objects.local
docs/rhinventory/mapping/: ExtendedMap_RM69414B34-BCF3-D1FB-FB27-63F752F3819B.xml
docs/rhinventory/pm/: Process Model.xml
docs/rhinventory/rel/: 69414B34-63F752F3819B.xml
ops/: deploy.sh  deploy_with_migration.sh
rhinventory/: admin.py  app.py  config.py  db.py  extensions.py  forms.py  labels.py  stats.py  util.py
rhinventory/admin_views/: __init__.py  asset.py  event.py  file.py  floppy_disk_capture.py  magdb.py  model_view.py  transaction.py  utils.py
rhinventory/admin_views/asset_files/: stream_asset_files_zip.py
rhinventory/api/: app.py  database.py
rhinventory/api/asset/: endpoints.py  schemas.py
rhinventory/datatypes/: hashes.py  struct.py
rhinventory/event_store/: event_store.py  views.py
rhinventory/events/: event.py  events.py  floppy_disk_captures.py  statements.py
rhinventory/files/: utils.py
rhinventory/labels/: labels.py
rhinventory/models/: asset.py  asset_attributes.py  computers.py  entities.py  enums.py  events.py  file.py  label_printer.py  log.py  magdb.py  transaction.py  user.py
rhinventory/models/aggregates/: aggregate.py  file.py  floppy_disk_capture.py  statement.py  test.py
rhinventory/models/properties/: properties.py  property.py
rhinventory/public_blueprints/: magdb.py
rhinventory/service/: asset_service.py  conftest.py  public_magdb.py  test_common.py
rhinventory/service/asset/: services.py
rhinventory/static/: main.css  public_magdb.css
rhinventory/templates/: _macros.html  labels.html
rhinventory/templates/admin/: _inline_create.html  asset_details.html  (+4 more)
scripts/: assign_all_assets_to_organization.py  fill_out_file_sizes.py  generate_file_hashes.py  magdb_importer.py  rebuild_aggregates.py  set_magdb_images_public.py
tests/: README.md  __init__.py  conftest.py  fixtures.py  test_events.py  test_hhfloppy_integration.py  test_rhinventory.py  test_rhinventory_api.py  tests.py
user/: hhprint.py  hhprint.reg
(+76 files in other folders)
