[tool.poetry]
name = "rhinventory"
version = "0.1.0"
description = ""
authors = ["Sanqui <me@sanqui.net>", "Tomáš Čapek <tomas@capek.io>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
numpy = "*"
Flask = "^2.1.2"
Flask-Login = "^0.6.1"
Flask-Admin = "^1.6.0"
GitHub-Flask = "^3.2.0"
alembic = "^1.7.7"
Pillow = "^10.4.0"
WTForms = "3.1.1" # Need to keep at 3.1.1 for Flask-Admin compatibility https://github.com/pallets-eco/flask-admin/issues/2391
simpleeval = "^0.9.13"
pyzbar = "^0.1.9"
beautifulsoup4 = "^4.11.1"
python-barcode = "^0.15.1"
environs = "^9.5.0"
gunicorn = "^20.1.0"
lxml = "^5.3.0"
pytest = "^7.1.2"
Bootstrap-Flask = "^2.1.0"
psycopg2 = "^2.9.3"
WTForms-Alchemy = "^0.18.0"
python-dateutil = "^2.8.2"
werkzeug = "^3.0.0"
sqlalchemy = "^2.0.0"
flask-sqlalchemy = "^3.1.0"
alembic-autogenerate-enums = "^0.1.2"
tqdm = "^4.66.1"
sentry-sdk = {extras = ["flask"], version = "^2.12.0"}

[tool.poetry.dev-dependencies]
mypy = "^0.950"

[tool.poetry.group.dev.dependencies]
flask-sqlalchemy = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
warn_no_return = true
warn_return_any = true
plugins = ["sqlalchemy.ext.mypy.plugin"]