[project]
name = "rhinventory"
version = "0.1.0"
description = ""
authors = [
    { name = "Sanqui", email = "me@sanqui.net" },
    { name = "Tomáš Čapek", email = "tomas@capek.io" },
]
requires-python = "==3.14.*"
dependencies = [
    "numpy",
    "Flask>=2.1.2",
    "Flask-Login>=0.6.1",
    "flask-admin==1.6.1",
    "GitHub-Flask>=3.2.0",
    "alembic>=1.7.7,<2",
    "Pillow>=10.4.0",
    "WTForms==3.1.2",
    "simpleeval>=0.9.13",
    "pyzbar>=0.1.9,<0.2",
    "beautifulsoup4>=4.11.1",
    "python-barcode>=0.15.1",
    "environs>=9.5.0",
    "gunicorn>=20.1.0",
    "lxml>=5.3.0",
    "pytest>=7.1.2",
    "Bootstrap-Flask>=2.1.0,<3",
    "psycopg2>=2.9.3",
    "WTForms-Alchemy>=0.18.0",
    "python-dateutil>=2.8.2",
    "werkzeug>=3.0.0",
    "sqlalchemy>=2.0.0",
    "flask-sqlalchemy>=3.1.1",
    "alembic-autogenerate-enums>=0.1.2",
    "tqdm>=4.66.1",
    "fastapi[standard]>=0.111.1",
    "pydantic>=2.8.2",
    "sentry-sdk[flask]>=2.12.0",
    "markdown~=3.7",
    "msgspec>=0.19.0",
    "hhfloppy",
]

[dependency-groups]
dev = [
    "mypy>=0.950",
    "playwright>=1.56.0",
    "psycopg2-binary>=2.9.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
warn_no_return = true
warn_return_any = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.uv.sources]
hhfloppy = { git = "https://github.com/hernihistorie/hhfloppy" }
